# vrc-dekapu

./: .gitignore  LICENSE  README.md  launcher.py  main.py  pyproject.toml  requirements.txt
app/: auth.py  config.py  connection_monitor.py  http.py  instance_manager.py  populate_monitor.py  post_manager.py  travelling_monitor.py
app/api/: patlite_api.py  vrchat_api.py
app/const/: group.py
app/controller/: instance_controller.py  osc_controller.py
app/model/: group_access_type.py  instance_type.py  region.py  vrchat.py
app/model/instance/: content_settings.py  create.py
app/service/: osc_service.py  vrc_service.py
app/ui/: header_view.py  instance_table_view.py  instance_viewer_app.py  osc_view.py
app/ui/dialog/: create_instance_dialog.py  launch_confirm_dialog.py
app/util/: auth.py  http.py  launcher.py  logger.py
